spring-boot-app-manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tomcatk8s
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
