spring-boot-app-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
  namespace: tomcatk8s
spec:
  type: NodePort
  selector:
    app: spring-boot-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 30080
