spring-boot-app-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  namespace: tomcatk8s
  labels:
    app: spring-boot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      # Refuse mount of tokens by k8s (CKV_K8S_38)
      automountServiceAccountToken: false
      containers:
      - name: spring-boot-app
        image: gstvo2k15/ultimate-cicd:v1.0.0
        # Ensure that image always will be downloaded (CKV_K8S_15)
        imagePullPolicy: Always
        securityContext:
          runAsUser: 10001
          runAsGroup: 10001
          fsGroup: 10001
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            # Delete all asigned capabilities (CKV_K8S_37)
              - ALL
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tomcat-war-storage
          mountPath: /usr/local/tomcat/webapps/
        - name: secret-volume
          mountPath: "/secrets"
          readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        command: ["sh", "-c", "while true; do sleep 30; done"]
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: tomcat-war-storage
        persistentVolumeClaim:
          claimName: tomcat-war-pvc
      - name: secret-volume
        secret:
          secretName: spring-boot-secrets
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app
  namespace: tomcatk8s
spec:
  podSelector:
    matchLabels:
      app: spring-boot-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 8080
